[package]
name = "lhsbat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cpal = "0.15.2"
fundsp = "0.16.0"
num = "0.4.1"
ringbuf = "0.3.3"
rodio = { version = "0.17.3", features = ["symphonia-all"] }
rustfft = "6.2.0"
spidev = "0.6.0"
tokio = "1.36.0"

# [target.'cfg(not(target_os = "windows"))'.dependencies]
# rppal = "0.15.0"

